Attempting to fix Modal size bug on mobile.

--- a/css/style.scss
+++ b/css/style.scss
@@ -110,7 +110,7 @@
 
 .modal-dialog {
     width: auto;
-    max-width: 97%;
+    max-width: 92%;
     display: inline-block;
 }
 
